# parallels

./: CMakeLists.txt  main.cpp  thread_gurad.hpp
